examples/kubernetes/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-apps
  labels:
    name: demo-apps
    app.kubernetes.io/name: demo-apps
